Fix password field overflow

--- a/public/styles.css
+++ b/public/styles.css
@@ -85,12 +85,13 @@ button.active {
 
 .password-wrapper {
   position: relative;
-  width: 80%;
+  width: 100%;
   margin: 0;
 }
 
 .password-wrapper input {
-  width: 80%;
+  width: 100%;
+  box-sizing: border-box;
   padding: 1em;
   padding-right: 2.5em;
   border: 1px solid #ccc;
@@ -115,4 +116,9 @@ button.active {
   margin-top: 0.5em;
   font-size: 0.9em;
   color: #555;
+  min-height: 1.2em;
+}
+
+.timer.hidden {
+  visibility: hidden;
 }
